pass test for unicast accelerator && merged with master branch

--- a/config_examples/acclerator.yaml
+++ b/config_examples/acclerator.yaml
@@ -1,15 +1,31 @@
-# ------------------- DEBUG CONFIGURATION FOR 1x3 LINEAR NETWORK -------------------
-#
-# NOC & WIRED CONFIGURATION
-#
-# topology: MESH  <-- 保持不变
-# X and Y mesh sizes
-mesh_dim_x: 3 # <--- [关键修改] 从 4 改为 3
-mesh_dim_y: 2 # <--- [关键修改] 从 4 改为 1
-topology: HIERARCHICAL 
-num_levels: 3
-nodes_per_level: [1, 4, 16]
-# number of flits for each router buffer
+topology: "HIERARCHICAL"
+
+# 层次化详细配置
+hierarchical_config:
+  num_levels: 3
+  connection_mode: "tree"
+  
+  # 每层的详细配置
+  level_configs:
+    - level: 0
+      node_type: "DRAM"
+      buffer_size: 64
+      roles: ["ROLE_DRAM"]
+      fanouts: 1  # 该层每个节点连接到下一层的节点数
+      
+    - level: 1  
+      node_type: "GLB" 
+      buffer_size: 32
+      roles: ["ROLE_GLB"]
+      fanouts: 1  # 该层每个节点连接到下一层的节点数
+      
+    - level: 2
+      node_type: "COMPUTE"
+      buffer_size: 16  
+      roles: ["ROLE_BUFFER"]
+      fanouts: 0
+      
+
 buffer_depth: 8 # <--- [建议修改] 稍微调大一点，避免初始调试时因缓冲区太小而产生干扰
 # size of flits, in bits
 flit_size: 32
