feat(parser): Implement robust multi-role workload configuration parser
This commit introduces a complete, decoupled system for parsing and validating the `workload.yaml` configuration. This new parser is designed to be highly extensible and directly aligns with the hierarchical, multi-role dataflow models analyzed from Timeloop.

The core of this implementation is a set of C++ structs and corresponding `yaml-cpp` decoders that introduce several new key configuration fields:

1.  **Multi-Role Specification (`data_flow_specs` & `working_set`):**
    *   **New Fields**: `role` identifier in `RoleWorkingSet` and `DataFlowSpec`.
    *   **Purpose**: Allows defining distinct data states (`working_set`) and behaviors (`data_flow_specs`) for different PE roles (e.g., `ROLE_GLB`, `ROLE_COMPUTE`) within a single configuration file. This is the foundation for modeling heterogeneous systems.

2.  **Command-Based PE Behavior (`command_definitions`):**
    *   **New Fields**: `command_definitions`, `CommandDefinition` struct (with `command_id`, `name`, `evict_payload`).
    *   **Purpose**: Decouples the *what* from the *when*. It allows `COMPUTE` PEs to pre-load a "dictionary" of atomic operations (e.g., "EVICT_DELTA"). The higher-level `GLB` can then command the PE by simply referencing a command `name` or `id`, without needing to know the implementation details of that command.

3.  **Advanced Scheduling & Triggering (`schedule_template`):**
    *   **New Fields**: `delta_events`, `Trigger` struct (supporting `on_timestep_modulo`, `on_timestep: "default"`).
    *   **Purpose**: Moves the data scheduling logic from hardcoded C++ into the configuration. It enables the definition of complex, periodic data dispatch patterns (e.g., a recurring `FILL` operation every 16 timesteps) that are directly observable in Timeloop outputs.

This commit also includes a comprehensive unit test suite (`test_ConfigParser.cpp`) using Catch2 to validate the correctness of the parsing logic for all

--- a/config_examples/workload.yaml
+++ b/config_examples/workload.yaml
@@ -1,44 +1,74 @@
 # =================================================================
-# WORKLOAD CONFIGURATION for GLB (Generated from Timeloop Log)
+# WORKLOAD CONFIGURATION (Final, Complete & Corrected Version)
 # =================================================================
 workload:
-  # --- 1. 角色工作集与复用策略 ---
+  # --- 1. 角色工作集 (定义每个角色需要维持的稳态数据) ---
   working_set:
+    # GLB 的目标是持有完整的 W, I, O 工作集
     - role: "ROLE_GLB"
       data:
-        # Weights 和 Inputs 在 GLB 都是驻留的，以服务于整个 256 步的计算
-        # 注意：在您的日志中，Weights 在 GLB 和 DRAM 层面都是 96，所以是 resident。
-        # 如果 GLB 的 Weights 小于 DRAM，那这里就应该是 stream。
-        - { data_space: "Weights", size: 96, reuse_strategy: "resident" } 
-        - { data_space: "Inputs", size: 18, reuse_strategy: "resident" }
+        - { data_space: "Weights", size: 96 }
+        - { data_space: "Inputs",  size: 18 }
+        - { data_space: "Outputs", size: 512 }
+    
+    # PE/COMPUTE 的稳态工作集
+    - role: "ROLE_COMPUTE"
+      data:
+        - { data_space: "Weights", size: 6 }
+        - { data_space: "Inputs",  size: 3 }
+        - { data_space: "Outputs", size: 2 }
 
-  # --- 2. 每个角色的数据流规格 ---
+  # --- 2. 每个角色的数据流/行为规格 ---
   data_flow_specs:
 
     # -----------------------------------------------------------
-    # 规格 A: 针对 GLB (数据分发中心)
+    # 规格 A: 针对 DRAM (一次性的主动数据 PUSH)
+    # -----------------------------------------------------------
+    - role: "ROLE_DRAM"
+      schedule_template:
+        total_timesteps: 1
+        delta_events:
+          - trigger: { on_timestep: "default" }
+            name: "INITIAL_LOAD_TO_GLB"
+            delta: { Weights: 96, Inputs: 18, Outputs: 512 }
+            target_group: "ALL_GLBS" # 目标是所有 GLB 节点
+
+    # -----------------------------------------------------------
+    # 规格 B: 针对 GLB (指挥官)
     # -----------------------------------------------------------
     - role: "ROLE_GLB"
-      
-      # [核心] 使用“规则模板”来定义 GLB 的周期性发送行为
       schedule_template:
-        # GLB 的主循环总共有 256 个时间步
         total_timesteps: 256
-        
-        # 定义在不同事件下，GLB 需要向 BUFFER 发送的数据块 (Delta)
         delta_events:
-          # --- 事件 1: FILL 操作 ---
-          # 触发条件：当 glb_timestep 是 16 的倍数时 (0, 16, 32, ...)
-          - trigger: { on_timestep_modulo: [16, 0] } # mod(timestep, 16) == 0
-            name: "FILL"
-            # 发送的数据：对应日志 {6, 3, 2}
-            # 我们假设 Outputs(2) 是 PE 需要读的旧 Psum
+          - trigger: { on_timestep_modulo: [16, 0] }
+            name: "FILL_TO_PES"
             delta: { Weights: 6, Inputs: 3, Outputs: 2 }
+            target_group: "ALL_COMPUTE_PES" # [修正] FILL 也需要目标
 
-          # --- 事件 2: DELTA 操作 ---
-          # 触发条件：默认情况 (所有其他时间步)
           - trigger: { on_timestep: "default" }
-            name: "DELTA"
-            # 发送的数据：对应日志 {0, 1, 2}
-            # 注意 Weights 是 0，因为在 DELTA 阶段不传输新的权重
+            name: "DELTA_TO_PES"
             delta: { Weights: 0, Inputs: 1, Outputs: 2 }
+            target_group: "ALL_COMPUTE_PES"
+
+      # [核心修正] GLB 定义了自己需要驱逐的数据量，供 DRAM "借用"
+      command_definitions:
+        # 这个命令描述了 DRAM 发送完初始数据后，需要从自己缓冲区移除的数据量
+        - command_id: 0 
+          name: "EVICT_AFTER_INIT_LOAD"
+          evict_payload: { Weights: 96, Inputs: 18, Outputs: 512 }
+      
+    # -----------------------------------------------------------
+    # 规格 C: 针对 COMPUTE PE (执行者)
+    # -----------------------------------------------------------
+    - role: "ROLE_COMPUTE"
+      properties:
+        compute_latency: 6
+      
+      command_definitions:
+        - command_id: 0
+          name: "EVICT_DELTA"
+          evict_payload: { Weights: 0, Inputs: 1, Outputs: 2 }
+        
+        - command_id: 1
+          name: "EVICT_FULL_CONTEXT"
+          evict_payload: { Weights: 6, Inputs: 3, Outputs: 2 }
