feat(PE): 实现完整的、由 workload 驱动的 PE 核心逻辑 本次提交完成了对 ProcessingElement (PE) 核心逻辑的全面重构，使其能够完全由 `workload.yaml` 配置驱动，并能精确模拟复杂的多级、并发数据流。
这个新的 PE 模型是一个统一的、角色驱动的状态机，其关键实现包括：

1.  **统一的 `txProcess` 与 `rxProcess`**:
    *   将原有的 `output_tx/rxProcess` 合并到主进程中，创建了统一的、能够并发处理双物理通道（主数据和输出）的调度器。
    *   引入了 `handle_tx/rx_for_port` 辅助函数，将物理层握手逻辑与高层决策逻辑清晰分离。

2.  **为 `GLB` 实现高级调度与同步**:
    *   `GLB` 的行为现在由一个宏观逻辑时间戳 (`logical_timestamp`) 驱动。
    *   实现了“派发-清空”模型：`run_storage_logic` 在每个时间步开始时，一次性生成所有任务包；`txProcess` 则负责异步发送，并在所有任务（逻辑和物理）都完成后才推进时间戳。
    *   实现了基于 `is_in_sync_points` 的“条件同步”机制，`GLB` 只在关键的“结算日”才会阻塞等待下游 `PE` 的 `Output` 回传，从而实现了高效的流水线操作。

3.  **为 `COMPUTE PE` 实现“命令驱动”模型**:
    *   `COMPUTE PE` 的行为被极大简化。它在 `pe_init` 时预加载一个“命令字典” (`command_definitions`)。
    *   `rxProcess` 负责从上游 `GLB` 发来的数据包中解析出 `command_id`。
    *   `run_compute_logic` 在计算完成后，作为一个纯粹的“执行者”，根据收到的 `command_id` 执行相应的驱逐操作。

4.  **实现了统一的“Reset = 清理 + 写回”后处理逻辑**:
    *   引入了 `execute_post_task_logic` (或类似的 `reset_logic`) 作为所有角色在任务完成后的统一入口。
    *   `COMPUTE PE` 在计算完成后，会执行驱逐并生成向 `GLB` 的写回包。
    *   `GLB` 在所有 `timestep` 完成后，会执行最终的清理并生成向 `DRAM` 的写回包。

5.  **完善的 `Testbench`**:
    *   搭建了一个基于 SystemC 的、功能完备的 `PE` 模块级测试平台。
    *   实现了“用 PE 测试 PE”的自激测试模式，成功地对 `DRAM`, `GLB`, `COMPUTE` 的端到端数据流进行了验证。

通过这次重构，`ProcessingElement` 已经从一个硬编码的单元，演进为了一个高度解耦、可配置、可扩展的通用数据流模拟引擎。

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -232,6 +232,53 @@ $(TEST_MODULE_TASK_MANAGER): $(TEST_TASK_MANAGER_OBJS)
 	@echo "--- Linking TaskManager test executable: $(TEST_MODULE_TASK_MANAGER) ---"
 	$(CXX) $(LIBDIR) $^ $(LDFLAGS) $(LIBS) -o $@ 2>&1 | c++filt
 
+
+# 测试可执行文件的名字
+TEST_MODULE_PE := test_pe
+
+# 测试程序的源文件和对应的目标文件
+TEST_PE_MAIN_SRC := ../tests/test_PE_smoke_test.cpp
+TEST_PE_MAIN_OBJ := $(subst ../tests,$(OBJDIR),$(TEST_PE_MAIN_SRC:.cpp=.o))
+
+# [核心修改] 构建 PE 测试所需的所有 .o 文件
+# 我们需要除了 main.o 之外的所有主程序对象文件
+
+# 1. 首先，定义 main.o 的路径
+MAIN_OBJ := $(OBJDIR)/Main.o
+
+# 2. 使用 filter-out 函数，从 $(OBJS) 列表中剔除 main.o
+OBJS_WITHOUT_MAIN := $(filter-out $(MAIN_OBJ),$(OBJS))
+
+# 3. 最终的依赖列表 = (所有.o - main.o) + 测试主程序的.o
+TEST_PE_OBJS := $(OBJS_WITHOUT_MAIN) $(TEST_PE_MAIN_OBJ)
+
+
+# ... (在 ##### RULES ##### 部分，编译和链接规则保持不变) ...
+
+# ##############################################################################
+# RULES FOR test_pe
+# ##############################################################################
+
+# test_pe 目标 (保持不变)
+test_pe: $(TEST_MODULE_PE)
+	@echo "\n--- Running ProcessingElement module tests ---"
+	./$(TEST_MODULE_PE)
+	@echo "--- ProcessingElement tests completed ---\n"
+
+
+# PE 测试主程序的编译规则 (保持不变)
+$(TEST_PE_MAIN_OBJ): $(TEST_PE_MAIN_SRC)
+	@echo "--- Compiling PE testbench: $< ---"
+	@mkdir -p $(dir $@)
+	$(CXX) $(CXXFLAGS) $(INCDIR) -I../tests/include -c $< -o $@
+
+
+# PE 测试可执行文件的链接规则 (保持不变)
+# 它现在会自动使用我们上面定义的、不包含 main.o 的 $(TEST_PE_OBJS)
+$(TEST_MODULE_PE): $(TEST_PE_OBJS)
+	@echo "--- Linking PE test executable: $(TEST_MODULE_PE) ---"
+	$(CXX) $(LIBDIR) $^ $(LDFLAGS) $(LIBS) -o $@ 2>&1 | c++filt
+
 ##### 3. 更新辅助规则 #####
 
 # 默认的 'all' 目标，现在编译 noxim 和所有测试程序
@@ -242,3 +289,4 @@ clean:
 	rm -f $(OBJS) $(MODULE) *~ $(TEST_HIERARCHICAL_MAIN_OBJ) $(TEST_MODULE_HIERARCHICAL) $(TEST_RESERVATION_TABLE_MAIN_OBJ) $(TEST_MODULE_RESERVATION_TABLE)
 	rm -f $(TEST_CONFIG_PARSER_OBJS) $(TEST_MODULE_CONFIG_PARSER)
 	rm -f $(TEST_TASK_MANAGER_OBJS) $(TEST_MODULE_TASK_MANAGER)
+	rm -f $(TEST_PE_MAIN_OBJ) $(TEST_MODULE_PE)
