feat(core): 实现数据驱动的PE初始化与能力推断，并修复一系列集成BUG
本次提交在一个新的特性分支上，完整地实现了一套数据驱动的、自动化的PE（处理单元）配置系统。这是对原有硬编码逻辑的一次重大重构和功能增强。

**核心实现:**

1.  **动态PE配置 (`ProcessingElement::configure`)**:
    *   新增了核心的 `configure` 方法，用于取代旧的、基于 `local_id` 的硬编码初始化逻辑。
    *   该方法现在能够根据从YAML文件加载的层次化拓扑配置 (`hierarchical_config`) 和全局连接图 (`parent_map`, `child_map` 等)，动态地为每个PE实例分配角色、设置缓冲区大小和网络邻居。

2.  **自动能力推断 (`infer_capabilities_from_workload`)**:
    *   实现了一个智能的配置函数，能够根据 `workload.yaml` 中定义的分层数据流，自动推断出每个PE角色所需的通信能力 (`CapabilityMap`)。
    *   该逻辑是分层且与特定缓冲区绑定的，准确地反映了数据从上层流向下层时的硬件需求。
    *   这使得硬件能力配置完全自动化，无需手动计算和指定。

**开发过程中的关键BUG修复:**

在本次功能的开发和集成过程中，定位并修复了一系列底层问题，确保了新系统的稳定性和正确性：
*   **工程配置**: 解决了因编译器未启用C++17标准导致的 `inline` 全局变量链接失败问题。
*   **状态管理**: 修复了 `BufferManager` 在移除数据时因未更新内部分类账本而导致的状态不一致BUG。
*   **初始化逻辑**: 确保了所有PE的 `configure` 方法都被正确调用，解决了因此引发的空指针异常。
*   **配置健壮性**: 在能力推断逻辑中加入了严格的边界检查 `assert`，以防止因 `workload` 配置错误（例如为最后一级PE定义分发任务）而导致的程序异常。

**当前状态:**

*   所有相关功能代码已实现。
*   相关的单元测试已通过，GDB调试验证了 `CapabilityMap` 的推断结果和PE的初始化状态完全正确。
*   此分支现在包含了一个功能完整的、可供进一步测试和代码审查的配置系统。

--- a/config_examples/acclerator.yaml
+++ b/config_examples/acclerator.yaml
@@ -9,20 +9,20 @@ hierarchical_config:
   level_configs:
     - level: 0
       node_type: "DRAM"
-      buffer_size: 64
-      roles: ["ROLE_DRAM"]
+      buffer_size: 512
+      roles: "ROLE_DRAM"
       fanouts: 1  # 该层每个节点连接到下一层的节点数
       
     - level: 1  
       node_type: "GLB" 
-      buffer_size: 32
-      roles: ["ROLE_GLB"]
+      buffer_size: 512
+      roles: "ROLE_GLB"
       fanouts: 1  # 该层每个节点连接到下一层的节点数
       
     - level: 2
       node_type: "COMPUTE"
-      buffer_size: 16  
-      roles: ["ROLE_BUFFER"]
+      buffer_size: 64  
+      roles: "ROLE_BUFFER"
       fanouts: 0
       
 
@@ -56,7 +56,7 @@ detailed: false
 # stop after a given amount of load has been processed
 max_volume_to_be_drained: 0
 show_buffer_stats: false
-# ... (detailed, max_volume_to_be_drained 等保持不变) ...
+# ... (detailed, max_volume_to_beROLE_DRAM_drained 等保持不变) ...
 
 # Verbosity level:
 verbose_mode: VERBOSE_OFF # <--- [关键修改] 设置为LOW，可以看到一些基本的网络活动日志
@@ -77,3 +77,81 @@ probability_of_retransmission: 0.1 # <--- [关键修改] 设为0！
 # 将其设置为TABLE_BASED，但提供一个空文件，确保它不会产生任何随机流量。
 traffic_distribution: TRAFFIC_TABLE_BASED # <--- [关键修改]
 traffic_table_filename: "empty_traffic.txt" # <--- 创建一个空的txt文件
+
+workload:
+  working_set:
+    - role: "ROLE_DRAM"
+      data:
+        - { data_space: "Weights", size: 96, reuse_strategy: "resident" }
+        - { data_space: "Inputs", size: 18, reuse_strategy: "resident" }
+        - { data_space: "Outputs", size: 512, reuse_strategy: "resident" }
+    - role: "ROLE_GLB"
+      data:
+        - { data_space: "Weights", size: 96, reuse_strategy: "resident" }
+        - { data_space: "Inputs", size: 18, reuse_strategy: "resident" }
+        - { data_space: "Outputs", size: 512, reuse_strategy: "resident" }
+    - role: "ROLE_BUFFER"
+      data:
+        - { data_space: "Weights", size: 6, reuse_strategy: "temporal" }
+        - { data_space: "Inputs",  size: 3, reuse_strategy: "temporal" }
+        - { data_space: "Outputs", size: 2, reuse_strategy: "temporal" }
+
+  data_flow_specs:
+
+    - role: "ROLE_DRAM"
+      schedule_template:
+        total_timesteps: 1
+        delta_events:
+          - trigger: { on_timestep: "default" }
+            name: "INITIAL_LOAD_TO_GLB"
+            target_group: "1,"
+            delta:
+              - { data_space: "Weights", size: 96 }
+              - { data_space: "Inputs",  size: 18 }
+              - { data_space: "Outputs", size: 512 }
+
+    # -----------------------------------------------------------
+    # 规格 B: 针对 ROLE_GLB
+    # -----------------------------------------------------------
+    - role: "ROLE_GLB"
+      schedule_template:
+        total_timesteps: 256
+        delta_events:
+          - trigger: { on_timestep_modulo: [16, 0] }
+            name: "FILL_TO_PES"
+            target_group: "2,"
+            
+            delta:
+              - { data_space: "Weights", size: 6 }
+              - { data_space: "Inputs",  size: 3 }
+              - { data_space: "Outputs", size: 2 }
+
+          - trigger: { on_timestep: "default" }
+            name: "DELTA_TO_PES"
+            target_group: "2,"
+            
+            delta:
+              - { data_space: "Inputs",  size: 1 }
+              - { data_space: "Outputs", size: 2 }
+
+      command_definitions:
+        - command_id: 0
+          name: "EVICT_AFTER_INIT_LOAD"
+          evict_payload: { Weights: 96, Inputs: 18, Outputs: 512 }
+
+    # -----------------------------------------------------------
+    # 规格 C: 针对 ROLE_COMPUTE
+    # -----------------------------------------------------------
+    - role: "ROLE_BUFFER"
+      properties:
+        compute_latency: 6
+        
+      command_definitions:
+        - command_id: 0
+          name: "EVICT_DELTA"
+
+          evict_payload: { Weights: 0, Inputs: 1, Outputs: 2 }
+          
+        - command_id: 1
+          name: "EVICT_FULL_CONTEXT"
+          evict_payload: { Weights: 6, Inputs: 3, Outputs: 2 } 
