feat(core): 增强任务调度器，支持混合模式事件与回退逻辑 本次提交对 TaskManager 及其相关的配置解析逻辑进行了一次重大的架构升级，旨在显著提升 workload.yaml 的表达能力和调度的灵活性，以支持更复杂、更真实的硬件行为模型。
这次重构的核心是引入了两种新的调度范式：Action级别的多播控制和低优先级的回退(Fallback)事件。
1. 核心架构升级：引入 Action 级别的 multicast 控制

动机:
旧的调度模型中，multicast 标志位于 DeltaEvent 级别，无法描述一个“在同一时间点、既要多播又要单播”的复杂事件（例如，在 "Fill" 阶段，既要向所有PE多播Inputs，又要逐个单播Weights）。

实现:

    将 multicast 属性从 DeltaEvent 级别下沉到更细粒度的 Action 级别。

    重构了 TaskManager 的任务生成逻辑：现在它会遍历 event 中的每一个 action，并独立地根据该 action 自身的 multicast 标志（如果存在）或从 event 继承的默认标志，来决定是生成一个多播任务，还是将其展开为多个独立的单播任务。

收益:

    极大地增强了 workload.yaml 的表达能力，现在可以用一个 DeltaEvent 来定义“混合模式”的复杂数据分发任务。

    配置文件变得更简洁、更符合逻辑直觉。

2. 新增调度功能：实现 fallback (回退) 触发器

动机:
为了更优雅地描述周期性任务中的“默认行为”（例如，"Fill" 周期之间的 "Delta" 更新），旧的 on_timestep_modulo 写法较为繁琐。

实现:

    在 Trigger 类型中增加了一种新的、低优先级的 "fallback" 类型。

    重构了 TaskManager 的主调度循环，采用“单遍扫描并缓存”的高效算法：

        在一个时间步的事件匹配中，优先查找并处理所有高优先级的显式触发器（default, on_timestep_modulo 等），并记录匹配次数。

        如果该时间步没有任何显式事件匹配 (matched_events == 0)，则回头处理之前缓存的 fallback 事件。

收益:

    引入了“调度优先级”的概念，使 workload 的编写能够清晰地区分“关键周期事件”和“常规周期事件”。

    简化了周期性数据流的定义，提高了配置文件的可读性和可维护性。

3. 其他相关修改与修复

    DispatchTask 结构调整: 相应地调整了 DispatchTask 的数据结构，以适应新的、更原子化的任务生成逻辑。

    ConfigParser 增强: 升级了 YAML 解析模板，使其能够正确解析 Action 级别可选的 multicast 标志和新的 fallback 触发器类型。

    健壮性提升: 在 TaskManager 中加入了更完善的日志和边界检查。

--- a/config_examples/acclerator.yaml
+++ b/config_examples/acclerator.yaml
@@ -126,7 +126,7 @@ workload:
               - { data_space: "Inputs",  size: 3 }
               - { data_space: "Outputs", size: 2 }
 
-          - trigger: { on_timestep: "default" }
+          - trigger: { on_timestep: "fallback" }
             name: "DELTA_TO_PES"
             target_group: "2,"
             
