fix(router): 修复多播转发非原子性BUG，实现All-or-Nothing机制
在先前版本中，路由器的多播（multicast）转发逻辑存在一个严重缺陷：它不保证转发的原子性。当一个多播包的多个目标端口中，只有部分端口的虚拟通道（VC）可用时，路由器会错误地将数据仅发往这些可用的端口，导致数据包被“分裂”，破坏了数据流的一致性，并在复杂场景下引发死锁。

本次提交彻底修复了此问题，其核心实现是引入了“全体预留或全体放弃”（All-or-Nothing）的资源预留机制：

1.  **原子性检查**: 在 `Router.cpp` 中，现在处理多播包时，会首先在 `ReservationTable` 中查询并尝试预留**所有**目标端口所需的虚拟通道资源。

2.  **同步转发**: 只有当所有目标端口的资源都能够被成功预留时，该多播包才会被原子地、并发地转发到所有目的地。

3.  **失败则回滚**: 如果有任何一个目标端口因资源不足（如VC被占用）而无法预留，路由器会立即放弃所有已尝试的预留，将整个多播请求延迟到下一个周期，确保不会发生部分转发。

这一改进不仅保证了多播操作的正确性和数据一致性，还通过更高效、更公平的资源调度，**显著提升了网络在高负载、多播场景下的并行转发能力**。

相关的 `multicast_workload.yaml` 配置已更新并用于端到端测试，验证了该修复在多PE、多播的复杂工作负载下能够稳定、正确地运行。

--- a/config_examples/multicast_workload.yaml
+++ b/config_examples/multicast_workload.yaml
@@ -60,7 +60,7 @@ use_wirxsleep: false
 #
 clock_period_ps: 1000
 reset_time: 10 # <--- [建议修改] 缩短reset时间，让我们的逻辑更快开始
-simulation_time: 10000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
+simulation_time: 100000 # <--- [关键修改] 增加模拟时间，确保我们能看到完整的交互链
 stats_warm_up_time: 0 # <--- [建议修改] 禁用warm up，我们想从一开始就看log
 # power breakdown, nodes communication details
 detailed: false
@@ -146,7 +146,7 @@ workload:
       command_definitions:
         - command_id: 0
           name: "PROCESS_FULL_CONTEXT"
-          evict_payload: { weights: 3072, inputs: 576, outputs: 512 }
+          evict_payload: { Weights: 3072, Inputs: 576, Outputs: 512 }
 
     - role: "ROLE_BUFFER"
       properties:
@@ -157,9 +157,9 @@ workload:
       command_definitions:
         - command_id: 0
           name: "PROCESS_DELTA"
-          evict_payload: { weights: 1, inputs: 1, outputs: 0 }
+          evict_payload: { Weights: 1, Inputs: 1, Outputs: 0 }
         - command_id: 1
           name: "PROCESS_FULL_CONTEXT"
-          evict_payload: { weights: 1, inputs: 16, outputs: 16 }
+          evict_payload: { Weights: 1, Inputs: 16, Outputs: 16 }
 
       
