feat(core): 引入Distribution节点角色并修复PE状态初始化BUG
本次提交引入了一个新的PE角色：`ROLE_DISTRIBUTION`。该角色在网络拓扑中充当纯粹的分发/聚合节点，它只负责根据路由表转发数据包，本身不作为数据的源或目的，也不参与计算。这使得模拟更复杂的、非直连的层次化数据流成为可能。

**核心实现:**

1.  **新增 `ROLE_DISTRIBUTION` 角色**:
    *   在 `DataTypes.h` 中定义了新的节点角色。
    *   `ProcessingElement` 的逻辑被更新，以确保 `DISTRIBUTION` 角色的PE仅执行转发逻辑。

2.  **增强拓扑映射构建 (`NoC::buildRoleMappings`)**:
    *   重构了 `buildRoleMappings` 函数，使其能够正确处理包含 `DISTRIBUTION` 中间节点的拓扑。
    *   该函数现在可以递归地穿透 `DISTRIBUTION` 层，正确地为 `GLB` (Storage) 节点找到其所有下游的 `COMPUTE` (Buffer) 叶子节点，并构建 `storage_to_compute_map` 和 `compute_to_storage_map`。这确保了即使在复杂的扇出（fan-out）拓扑中，端到端的逻辑连接也能被正确建立。

**BUG修复:**

*   **修复 `PE` 状态未初始化问题**:
    *   在 `ProcessingElement::txProcess` 的复位逻辑中，状态变量 `compute_in_progress_` 和 `is_compute_complete` 未被初始化。
    *   这可能导致PE在仿真开始或复位后，其计算状态处于一个不确定的状态，从而引发不可预测的行为。
    *   本次提交已在复位逻辑中添加了对这两个变量的正确初始化，确保了状态的确定性。

--- a/config_examples/multicast_workload.yaml
+++ b/config_examples/multicast_workload.yaml
@@ -13,7 +13,7 @@ topology: "HIERARCHICAL"
 
 # 层次化详细配置
 hierarchical_config:
-  num_levels: 3
+  num_levels: 4
   connection_mode: "tree"
   
   # 每层的详细配置
@@ -28,9 +28,15 @@ hierarchical_config:
       node_type: "GLB"
       buffer_size: 4164
       roles: "ROLE_GLB"
-      fanouts: 16  # 该层每个节点连接到下一层的节点数
-      
+      fanouts: 4  # 该层每个节点连接到下一层的节点数
+
     - level: 2
+      node_type: "DISTRIBUTOR"
+      buffer_size: 0
+      roles: "ROLE_DISTRIBUTOR"
+      fanouts: 4  # 该层每个节点连接到下一层的节点数
+      
+    - level: 3
       node_type: "COMPUTE"
       buffer_size: 64  
       roles: "ROLE_BUFFER"
@@ -90,7 +96,7 @@ traffic_distribution: TRAFFIC_TABLE_BASED # <--- [关键修改]
 traffic_table_filename: "empty_traffic.txt" # <--- 创建一个空的txt文件
 
 variables:
-  all_pes_group: &all_pes_group "2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17"
+  all_pes_group: &all_pes_group "6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21"
 
 workload:
   working_set:
